--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/router": "^16.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.0"
+    "zone.js": "~0.13.0",
+    "@ffmpeg/ffmpeg": "^0.12.7",
+    "@ffmpeg/util": "^0.12.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.10",
